# smart_shopping

./: .gitignore  CLAUDE.md  pyproject.toml
.claude/: settings.json
.claude/commands/: backend.md  coordinator.md  deploy-agent.md  eval.md  frontend.md  logging.md  mcp.md  review.md  sanity.md  testing.md
config/: .env.dev  .env.local  .env.prod
docs/: product_guideline.md
evals/: eval_agent.py
evals/test_cases/: basic_searches.json
scripts/: check_branch.sh  check_commit_scope.sh  deploy.sh  push_to_prod.sh  run.sh  run_agent_evals.sh  verify_playwright.py
src/: __init__.py
src/agents/: __init__.py  main_agent.py  prompts.py
src/backend/: main.py
src/backend/api/: routes.py
src/backend/db/: engine.py  models.py
src/backend/websocket/: handler.py
src/dashboard/: __main__.py  server.py
src/frontend/: package-lock.json  package.json
src/frontend/app/: globals.css  layout.tsx  page.tsx
src/frontend/components/: ProductCard.tsx  SellerList.tsx
src/frontend/lib/: websocket.ts
src/mcp_servers/io_validator_mcp/: __init__.py  server.py
src/mcp_servers/negotiator_mcp/: __init__.py
src/shared/: browser.py  config.py  geo.py  logging.py  models.py
tests/: conftest.py
tests/mcp/: test_db_cache.py  test_ecommerce_detector.py  test_io_validator.py  test_product_criteria.py  test_results_processor.py  test_scraping_strategy.py  test_spec_patterns.py  test_web_scraper.py  test_web_search.py
tests/unit/: test_agent.py  test_api.py  test_browser.py  test_dashboard.py  test_db.py  test_geo.py  test_logging.py  test_models.py  test_websocket.py
(+17 files in other folders)
